--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,15 @@ flask-script = "*"
 sqlalchemy-utils = "==0.33.2"
 alembic = "*"
 psycopg2-binary = "*"
+py = "*"
+pytest = "*"
+nose2 = "*"
+tox = "*"
+flask-testing = "*"
+coveralls = "*"
+flake8 = "*"
+pytest-cov = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
