--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgres://postgres:converge-backend@localhost:5432/politico
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 # Logging configuration
