--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,10 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
   - psql -c 'create database politico;' -U postgres
-  - alembic init
-  - alembic stamp head
-  - alembic upgrade head
 script:
-  - python3 -m coverage run -m pytest --cov=api/ --cov-report xml
+  - tox -e python3.6
+  - tox -e flake8
+  - coverage xml
 after_script:
   - ./cc-test-reporter format-coverage -o ./.coverage -t coverage.py
   - ./cc-test-reporter upload-coverage -i .coverage
