--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
+source venv/bin/activate
 export APP_SETTINGS="development"
-export SECRET_KEY=some-very-long-string-of-random-characters
+export SECRET_KEY=some-very-long-string-of-rfghvbjknandom-characters
 export DEV_DATABASE_URL=postgres://postgres:converge-backend@localhost:5432/politico
 export TEST_DATABASE_URL=postgres://postgres:converge-backend@localhost:5432/test
 export DATABASE_URL=postgres://qpohlxfj:JCVTOzx8DxG3gu2CosCHo9fIPe678Sik@raja.db.elephantsql.com:5432/qpohlxfj
