--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,11 +59,10 @@ store_the_artifacts: &store_the_artifacts
     path: test-reports
     destination: test-reports
 
-workflows:
-  build-test-and-deploy:
-    jobs:
-      test-2.7:
-        <<: *defaults
+version: 2
+  jobs:
+    test-2.7:
+      <<: *defaults
         <<: *set_workspace
 
         steps:
@@ -115,3 +114,14 @@ workflows:
                 coverage report
                 ./cc-test-reporter format-coverage -o ./.coverage -t coverage.py
                 ./cc-test-reporter upload-coverage -i .coverage
+
+workflows:
+  version: 2
+  build-then-deploy:
+    jobs:
+      - test-3.5
+      - test-3.6-flake
+      - code-climate:
+          requires:
+            - test-3.5
+            - test-3.6-flake
