--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist = python2.7,
 
 [testenv]
 passenv = *
-deps = Pipfile
+deps = -rrequirements.txt
 
 commands =
        coverage run -m pytest -v
