feature(login): implement login functionality
- users should be able to login
- validation checks
- write tests

[finishes #167162057]

--- a/tox.ini
+++ b/tox.ini
@@ -8,12 +8,11 @@ envlist = python2.7,
     python3.7,
     flake8
 
-[testenv]
+[testenv:coverage]
 passenv = *
-deps = Pipfile
-
-commands =
+deps = -rrequirements.txt
 whitelist_externals = coverage
+commands =
        coverage run -m pytest -v
        coverage report
        coverage html
