--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ export SECRET_KEY="some-very-long-string-of-random-characters"
 export DEV_DATABASE_URL="" # Db for Development.
 export TEST_DATABASE_URL="" # Db for Testing
 export DATABASE_URL="" # Db for Production
+export USER_TOKEN= # User jwt token
