--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,7 @@ export SECRET_KEY="some-very-long-string-of-random-characters"
 export DEV_DATABASE_URL="" # Db for Development.
 export TEST_DATABASE_URL="" # Db for Testing
 export DATABASE_URL="" # Db for Production
-export USER_TOKEN= # User jwt token
+export GOOGLE= # google api key
+export CITIZEN_TOKEN= # a citizens user token
+export POLITICIAN_TOKEN=  # a politicians user token
+export ADMIN_TOKEN=  # a admins user token
