--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ Flask-JSON==0.3.3
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
+Flask-Migrate==2.5.2
+gunicorn==19.9.0
 Flask-Testing==0.7.1
 graphene==2.1.6
 graphene-sqlalchemy==2.2.1
