--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ alembic==1.0.11
 aniso8601==6.0.0
 atomicwrites==1.3.0
 attrs==19.1.0
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
 Click==7.0
 coverage==4.5.3
 entrypoints==0.3
@@ -14,14 +17,14 @@ Flask-JSON==0.3.3
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
-Flask-Migrate==2.5.2
-gunicorn==19.9.0
 Flask-Testing==0.7.1
 graphene==2.1.6
 graphene-sqlalchemy==2.2.1
 graphql-core==2.2
 graphql-relay==0.4.5
 graphql-server-core==1.1.1
+gunicorn==19.9.0
+idna==2.8
 importlib-metadata==0.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -34,13 +37,18 @@ pluggy==0.12.0
 promise==2.2.1
 psycopg2-binary==2.8.3
 py==1.8.0
+py-bcrypt==0.4
 pycodestyle==2.5.0
+pycparser==2.19
 pyflakes==2.1.1
+PyJWT==1.7.1
 pyparsing==2.4.0
 pytest==4.6.3
 pytest-cov==2.7.1
 python-dateutil==2.8.0
+python-dotenv==0.10.3
 python-editor==1.0.4
+requests==2.22.0
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.12.0
@@ -48,6 +56,7 @@ SQLAlchemy==1.3.5
 SQLAlchemy-Utils==0.34.0
 toml==0.10.0
 tox==3.13.1
+urllib3==1.25.3
 virtualenv==16.6.1
 wcwidth==0.1.7
 Werkzeug==0.15.4
